--- a/app/src/main/res/layout/activity_constrain_layout.xml
+++ b/app/src/main/res/layout/activity_constrain_layout.xml
@@ -7,7 +7,7 @@
     tools:context=".ConstrainLayoutActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivProductImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
